# FleCSibleLUA

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/RotatingSquare/: CMakeLists.txt  components.h  main.cpp  script.lua  systems.cpp  systems.h
include/: flecsible_lua.h
src/: CMakeLists.txt  flecsible_lua.cpp
